# oofbot

./: .gitignore  .rustfmt.toml  Cargo.toml  LICENSE  README.md
src/: canary_update.rs  dogebotno.rs  logger.rs  main.rs  meme.rs  permissions.rs  servers.rs  voice.rs
