[package]
name = "oofbot"
version = "0.1.0"
authors = ["The-Emperor10 <44948520+The-Emperor10@users.noreply.github.com>"]
edition = "2018"

[dependencies]
rand = "0.7"
chrono = "0.4.7"
lazy_static = "1.4"
lock_api = "0.3"
serde_json = ""
regex = "1.3"
rayon = "1.3"
bincode = ""
sqlite = "0.25"
ctrlc = "3.1.4"
num-traits = "0.2"
num-derive = "0.3"
tokio = { version = "0.2", features = ["full"] }
futures = "0.3.7"

[dependencies.serenity]
default-features = false
features = ["builder", "cache", "client", "framework", "gateway", "http", "model", "standard_framework", "utils", "voice", "native_tls_backend"]
version = "0.9"
